--- a/package.json
+++ b/package.json
@@ -1,27 +1,70 @@
 {
-  "name": "ticket-hub",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "ticket-hub",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"clean": "rm -rf .next && rm -rf node_modules",
+		"ins:clean": "npm run clean && npm install && npx prisma generate",
+		"dev:clean": "npm run ins:clean && npm run dev",
+		"lint": "eslint src --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
+		"lint:fix": "eslint src --ext js,jsx,ts,tsx --fix",
+		"format": "prettier --write \"**/*.{ts,tsx,mjs,js,jsx,md,mdx,css,yaml,yml,html,json}\"",
+		"format:check": "prettier --check \"**/*.{ts,tsx,mjs,js,jsx,md,mdx,css,yaml,yml,html,json}\"",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^4.1.3",
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"@t3-oss/env-nextjs": "^0.12.0",
+		"@tanstack/react-query": "^5.69.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lint-staged": "^15.5.0",
+		"lucide-react": "^0.483.0",
+		"motion": "^12.5.0",
+		"next": "15.2.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2",
+		"zod": "^3.24.2"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@eslint/js": "^9.22.0",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.2.3",
+		"husky": "^9.1.7",
+		"prettier": "^3.5.3",
+		"tailwindcss": "^4",
+		"ts-node": "^10.9.2",
+		"typescript": "^5",
+		"typescript-eslint": "^8.26.1"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"src/**/*.{ts,tsx,js,jsx}": [
+			"npm run lint:fix",
+			"npm run lint",
+			"npm run format",
+			"npm run format:check"
+		]
+	},
+	"engines": {
+		"node": ">18.8.x"
+	}
 }
