--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,37 @@
 {
-  "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
-}
+	"compilerOptions": {
+	  "lib": ["dom", "dom.iterable", "esnext"],
+	  "allowJs": true,
+	  "skipLibCheck": true,
+	  "strict": true,
+	  "noEmit": true,
+	  "esModuleInterop": true,
+	  "noUncheckedIndexedAccess": true,
+	  "module": "esnext",
+	  "moduleResolution": "bundler",
+	  "resolveJsonModule": true,
+	  "isolatedModules": true,
+	  "jsx": "preserve",
+	  "incremental": true,
+	  "types": ["node"],
+	  "plugins": [
+		{
+		  "name": "next"
+		}
+	  ],
+	  "paths": {
+		"@/*": ["./src/*"]
+	  },
+	  "target": "ES2017"
+	},
+	"include": [
+	  "next-env.d.ts",
+	  "**/*.ts",
+	  "**/*.tsx",
+	  ".next/types/**/*.ts",
+	  "**/*.d.ts",
+	  "prisma-extensions.d.ts"
+	],
+	"exclude": ["node_modules"]
+  }
+  
