--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "class-variance-authority": "^0.7.1",
@@ -26,10 +27,12 @@
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
     "next": "15.2.3",
+    "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
