--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.5",
+    "@clerk/themes": "^2.2.21",
     "@hookform/resolvers": "^4.1.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@radix-ui/react-slot": "^1.1.2",
