--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.24.2",
     "@clerk/nextjs": "^6.12.5",
     "@clerk/themes": "^2.2.21",
     "@hookform/resolvers": "^4.1.3",
@@ -25,6 +26,7 @@
     "@tanstack/react-query": "^5.69.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.21.0",
     "lint-staged": "^15.5.0",
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
