--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@clerk/clerk-react": "^5.24.2",
     "@clerk/nextjs": "^6.12.5",
     "@clerk/themes": "^2.2.21",
+    "@convex-dev/rate-limiter": "^0.2.6",
     "@hookform/resolvers": "^4.1.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@radix-ui/react-slot": "^1.1.2",
