--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@convex-dev/rate-limiter": "^0.2.6",
     "@hookform/resolvers": "^4.1.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
