--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-qr-code": "^2.0.15",
     "sonner": "^2.0.1",
     "stripe": "^17.7.0",
     "svix": "^1.62.0",
